--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/three": "^0.176.0",
     "solid-js": "^1.9.5",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "zod": "^3.24.4"
   }
 }
