--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,18 @@
 		{
 			"type": "typescript",
 			"tsconfig": "tsconfig.json",
+			"option": "watch",
 			"problemMatcher": [
-				"$tsc"
+				"$tsc-watch"
 			],
-			"group": "build",
-			"label": "tsc: build - tsconfig.json"
+			"group": {
+				"kind": "build",
+				"isDefault": true,
+			},
+			"runOptions": {
+				"runOn": "folderOpen"
+			},
+			"label": "tsc: watch - tsconfig.json",
 		}
 	]
 }
