--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/three": "^0.176.0",
+    "lil-gui": "^0.20.0",
     "solid-js": "^1.9.5",
     "three": "^0.176.0",
     "zod": "^3.24.4"
